tests/ast_interpreter/err_list_repetition_overflow.expected
<string>:4:17: error: list repetition result too large
    print(large * 999999999999999999);
                ^
