tests/ast_interpreter/err_list_repetition_overflow.nx
fun main() {
    // This should trigger overflow check: trying to allocate huge list
    var large = [1, 2] * 10;
    print(large * 999999999999999999);
}